fixing footer spacing issues

--- a/factory/static/stylesheets/sass/main.sass
+++ b/factory/static/stylesheets/sass/main.sass
@@ -54,7 +54,7 @@ footer
 	color: $font-color-contrast
 
 .register
-	padding: 3px 0px 0px 10px
+	padding-left: 10px
 	min-width: 122px
 
 .search
@@ -62,6 +62,11 @@ footer
 
 .downloads
 	margin-left: 0
+
+.footer-row
+	margin-right: 20px
+	margin-left: 20px
+	max-width: inherit
 
 .copyright 
 	font-size: 0.9em
